scrollbar fixed

--- a/src/app/contacts/contactlist/contactlist.component.scss
+++ b/src/app/contacts/contactlist/contactlist.component.scss
@@ -86,7 +86,7 @@ main {
 @media (max-width: 1000px) {
   main {
     #contactlist {
-      height: 88%;
+      height: 75vh;
     }
   }
 }
@@ -94,6 +94,7 @@ main {
 @media (max-width: 960px) {
   main {
     #contactlist {
+      height: 75vh;
       #contact-container {
         font-size: 0.9rem;
         padding: 0.5rem;
@@ -108,7 +109,7 @@ main {
     padding: 0 2rem;
     position: relative;
     #contactlist {
-      height: 100%;
+      height: 84vh;
     }
     button {
       z-index: 1;
